优化搜索联系人排版及历史记录问题修复

--- a/hnode/views/partials/navbar.ejs
+++ b/hnode/views/partials/navbar.ejs
@@ -5,9 +5,10 @@
     </button>
     
     <div class="ms-auto d-flex align-items-center">
-      <!-- 搜索框 -->
-      <div class="search-box me-3">
-        <input type="text" class="form-control" placeholder="搜索..." id="globalSearch">
+      <!-- 全局搜索 -->
+      <div class="global-search-container me-3">
+        <input type="text" class="form-control" placeholder="🔍 快速导航..." id="globalSearchInput">
+        <div id="globalSearchResults"></div>
       </div>
       
       <!-- 通知 -->
