--- a/hnode/views/layouts/main.ejs
+++ b/hnode/views/layouts/main.ejs
@@ -98,6 +98,8 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <!-- 通知系统 -->
   <script src="/js/notifications.js"></script>
+  <!-- 全局搜索 -->
+  <script src="/js/global-search.js"></script>
   <!-- Toast通知容器 -->
   <div id="toastContainer"></div>
 
